# rust-developer

hw-01/: Cargo.toml
hw-02/: Cargo.toml  README.md
hw-02/src/: main.rs
hw-l01-setup/: README.md
hw-l01-setup/src/: greeting.rs
hw-l02-variables/: Cargo.toml  README.md
hw-l05-errors/: Cargo.toml  README.md
hw-l05-errors/src/: main.rs  str_utils.rs
hw-l05-errors/tests/: integration_tests.rs
hw-l07-concurrency/: Cargo.toml  README.md  countries.csv  fruits.csv
hw-l07-concurrency/src/: lib.rs  main.rs  str_utils.rs
hw-l07-concurrency/tests/: integration_tests.rs
hw-l09-networking/: .gitignore  Cargo.toml  README.md
hw-l09-networking/src/: client_utils.rs  lib.rs  main.rs  server_utils.rs
hw-l11-ecosystem/: Cargo.toml  README.md
hw-l11-ecosystem/src/: lib.rs  server_utils.rs
hw-l11-ecosystem/src/client/: mod.rs
hw-l11-ecosystem/src/common/: mod.rs
hw-l11-ecosystem/src/server/: mod.rs
hw-l13-error-handling/: Cargo.toml  README.md
hw-l13-error-handling/src/: lib.rs
hw-l13-error-handling/src/client/: mod.rs
hw-l13-error-handling/src/common/: mod.rs
hw-l13-error-handling/src/server/: mod.rs
hw-l15-async/: Cargo.toml  README.md
hw-l15-async/src/client/: mod.rs
hw-l15-async/src/common/: mod.rs
hw-l15-async/src/server/: mod.rs
