[package]
name = "networking"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"
[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
path = "src/lib.rs"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
image = "0.25.2"
serde = { version = "1.0", features = ["derive"] }
