[package]
name = "networking"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"
[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
chrono = "0.4.38"
env_logger = "0.11.4"
image = "0.25.2"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.63"
